- fix some alignment with radu draw

--- a/projects/drawing-shapes/style.css
+++ b/projects/drawing-shapes/style.css
@@ -6,8 +6,8 @@ body {
     align-items: stretch;
     background-color: var(--color-background);
     gap: var(--space-4);
-
     height:100vh;
+    padding-inline-end: var(--space-2);
 
     header {
         padding-block: var(--space-1);
